# docs/swagger.json
@@ -423,9 +423,6 @@
         "auth.RegisterCredentials": {
             "type": "object",
             "properties": {
-                "age": {
-                    "type": "integer"
-                },
                 "email": {
                     "type": "string"
                 },
@@ -584,8 +581,8 @@
         "user.User": {
             "type": "object",
             "properties": {
-                "age": {
-                    "type": "integer"
+                "birthday": {
+                    "type": "string"
                 },
                 "createdAt": {
                     "type": "string"
@@ -617,8 +614,8 @@
         "user.userUpdate": {
             "type": "object",
             "properties": {
-                "age": {
-                    "type": "integer"
+                "birthday": {
+                    "type": "string"
                 },
                 "first_name": {
                     "type": "string"
