# user/models.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"github.com/New-pal/np-backend/core"
 	"gorm.io/gorm"
+	"time"
 )
 
 func Migrate(db *gorm.DB) {
@@ -12,12 +13,12 @@ func Migrate(db *gorm.DB) {
 
 type User struct {
 	gorm.Model
-	Email     string `json:"email" gorm:"size:255;not null;index;unique" valid:"email,required"`
-	Password  []byte `json:"-" swaggerignore:"true"`
-	FirstName string `json:"first_name" gorm:"size:255; not null;" valid:"required"`
-	LastName  string `json:"last_name" gorm:"size:255"`
-	Gender    bool   `json:"gender" gorm:"type:bool;not null"` // false - female true - male
-	Age       uint   `json:"age" gorm:"type:uint;not null"`
+	Email     string     `json:"email" gorm:"size:255;not null;index;unique" valid:"email,required"`
+	Password  []byte     `json:"-" swaggerignore:"true"`
+	FirstName string     `json:"first_name" gorm:"size:255; not null;" valid:"required"`
+	LastName  string     `json:"last_name" gorm:"size:255"`
+	Gender    bool       `json:"gender" gorm:"type:bool;not null"` // false - female true - male
+	Birthday  *time.Time `json:"birthday" gorm:"type:time;default=null"`
 }
 
 func (u *User) GetId() string {
